# f1-ml

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run.py
src/data/: build_features.py  fetch_sessions.py
src/models/: evaluate.py  predict_model.py  train_model.py
