[tool.poetry]
name = "f1-ml"
version = "0.1.0"
description = "End-to-end ML system for F1 race predictions"
authors = ["Francesco Parra <francescoparra02a@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"

fastf1 = "^3.3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"

scikit-learn = "^1.3.2"
xgboost = "^3.1.2"
lightgbm = "^4.1.0"

matplotlib = "^3.8.2"
seaborn = "^0.13.0"
mlflow = "^3.8.1"

# Utils
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
scipy-stubs = "~=1.16.3"
pandas-stubs = "~=2.3.3"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
pytest = "^9.0.2"
ipdb = "^0.13.13"

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^4.0.9"
notebook = "^7.0.6"
ipykernel = "^7.1.0"

[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
